Bug 993714 - [e10s] Cache native key bindings in tests (r=masayuki,sr=roc)